2004-05-30  MenTaLguY  <mental@rydia.net>

	* src/selection.h, src/selection.cpp:
	  rework SPSelection to be SPObject- rather than SPItem- oriented;
	  this will be needed later for the layers/document tree dialog
      (and could prove useful for the XML editor later too)

	* src/sp-item.h: make SPItem a proper C++ subclass of SPObject

	* src/dialogs/item-properties.cpp:
	  correct overly intimate knowledge of SPObject (use SP_OBJECT_ID rather
	  than directly accessing the SPObject::id member)

2004-05-27  Kees Cook  <kees@outflux.net>

	* src/extension/internal/ps.h, src/extension/internal/ps.cpp:
	  Hopefully fixed the locale problems in the PS output generator.
	* src/sp-offset.cpp, src/display/bezier-utils-test.cpp,
	  src/display/nr-arena-item.cpp, src/libnr/nr-svp-render.cpp,
	  src/libnr/testnr.cpp, src/livarot/AlphaLigne.cpp,
	  src/livarot/Ligne.cpp, src/livarot/Path.cpp,
	  src/livarot/PathCutting.cpp, src/livarot/Shape.cpp,
	  src/livarot/ShapeDraw.cpp, src/livarot/ShapeSweep.cpp,
	  src/svg/svg-affine.cpp: added comments and notes to all remaining
	  "printf"ish calls that have %g or %f in them.  Most are just debug
	  output, etc.  Hopefully we are actually free of locale bugs!  :)
	* src/desktop.h, src/desktop.cpp: desktop's knowledge of
	  fullscreen-ness doesn't depend on having the ability to DO it.  Other
	  functions already test "is_fullscreen" to alter their behavior.

2004-05-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/extension/system.h, src/extension/system.cpp (build_from_file):
	  Remove unused second argument.  Callers updated.
	* src/extension/system.cpp (build_from_reprdoc):
	  Just one call to sp_repr_name per child.
	* src/extension/system.h, src/extension/system.cpp:
	  Cleanup: greater conformance to CodingStyle.

2004-05-23  MenTaLguY  <mental@rydia.net>

	* src/libnrtype/Makefile_insert, src/libnrtype/nr-type-gnome.cpp,
	  src/libnrtype/nr-type-gnome.h, src/libnrtype/nr-type-dictionary:
